--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -2,6 +2,7 @@ $main-color: #FFA501;
 //$main-color: #18BE1D;
 $white: #fff;
 $black: #000;
+$error: #ff8e8e;
 $body-bg: #1a1a1a;
 $gray-bg: #4a4a4a;
 
