--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -72,6 +72,19 @@
             font-size: 12px;
         }
     }
+    label.error {
+        position: absolute;
+        height: 18px;
+        color: $error;
+        top: 36px;
+        left: 20px;
+    }
+    #checkbox-error {
+        left: -8px;
+    }
+    
+    
+    
     &__input {
         position: relative;
         input {
@@ -107,11 +120,13 @@
         grid-column: 1/3;
         column-gap: 35px;
     }
+
     &__btn {
         padding-left: 26px;
         padding-right: 26px;
     }
     &__policy {
+        position: relative;
         font-size: 12px;
         font-weight: 500;
         display: flex;
