--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,8 @@
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth
+
 }
 
 h1, h2, h3, h4 {
@@ -53,6 +55,7 @@ body {
 @import 'blocks/price';
 @import 'blocks/contacts';
 @import 'blocks/privacy';
+@import 'blocks/modal';
 
 @import 'blocks/media';
 
